@@ -117,7 +117,7 @@ Ext.extend(GO.grid.ModulePermissionsGrid, GO.grid.GridPanel,{
 	
 	setIdParam : function(id) {
 		
-		this.setDisabled(!id);
+		
 		
 		this.store.baseParams['id'] = id;
 		this.store.baseParams['paramIdType'] = this.paramIdType;
